added header and footer

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-  <title></title>
-  <meta charset="utf-8">
+<html lang="en">
+  <head>
+    <title>Incremental Development</title>
+    <meta charset="utf-8" />
+    <!-- Leave this here!  It renders the review buttons  -->
+    <script src="./evaluation/init.js"></script>
+  </head>
 
-  <!-- Leave this here!  It renders the review buttons  -->
-  <script src='./evaluation/init.js'></script>
-</head>
+  <body>
+    <header>
+      <h1>How do People Think?</h1>
+    </header>
 
-<body>
-</body>
-
+    <footer>
+      <h5>PeopleThinkHow &copy;</h5>
+    </footer>
+  </body>
 </html>
