--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Incremental Development</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/styles.css">
     <!-- Leave this here!  It renders the review buttons  -->
     <script src="./evaluation/init.js"></script>
   </head>
