--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <header>
       <h1>How do People Think?</h1>
     </header>
+    <section>
+      <p>
+        Well, this has really been a tough question to answer. My colleagues and I sat down last week and we spent at
+        least 45 minutes thinking about it. Still we have nothing smart to say.
+      </p>
+    </section>
 
     <footer>
       <h5>PeopleThinkHow &copy;</h5>
