--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <header>
       <h1>How do People Think?</h1>
     </header>
+    <aside>
+      <p>
+        To learn <strike>everything</strike> about people,
+        <a href="#" target="_blank">
+          ask them</a>
+      </p>
+    </aside>
     <section>
       <p>
-        Well, this has really been a tough question to answer. My colleagues and I sat down last week and we spent at
+        Well, this has really been a tough question to answer. <br> My colleagues and I sat down last week and we spent at
         least 45 minutes thinking about it. Still we have nothing smart to say.
       </p>
     </section>
