--- a/index.html
+++ b/index.html
@@ -6,7 +6,53 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/styles.css">
     <!-- Leave this here!  It renders the review buttons  -->
-    <script src="./evaluation/init.js"></script>
+   <style>
+     * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+     h1 {
+       font-family: fantasy;
+       text-align: center;
+       padding: 20px;
+
+     }
+
+p {
+  font-family: fantasy;
+    font-size: smaller;
+    text-align: center;
+    padding: 50px;
+}
+aside {
+    width: 40%;
+    padding-left: .5rem;
+    margin-left: .5rem;
+    float: right;
+    font-style: italic;
+    position: relative;
+  }
+
+  button:hover {
+  position: fixed;
+      background: rgba(red, green, blue, alpha);
+      color: rosybrown;
+     cursor: pointer;
+
+  }
+
+  .footer-wrapper {
+  display: flex;
+  padding: 2rem;
+  width: 90%;
+  margin: auto;
+  align-items: center;
+  min-height: 10vh;
+  flex-wrap: wrap; }
+
+   </style>
   </head>
 
   <body>
@@ -19,6 +65,7 @@
         <a href="#" target="_blank">
           ask them</a>
       </p>
+      <button> Connect Me </button>
     </aside>
     <section>
       <p>
@@ -28,7 +75,8 @@
     </section>
 
     <footer>
-      <h5>PeopleThinkHow &copy;</h5>
+      <div class="footer-wrapper">
+      <h5>PeopleThinkHow &copy;</h5></div>
     </footer>
   </body>
 </html>
