return deleted script, srr

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/styles.css">
     <!-- Leave this here!  It renders the review buttons  -->
+    <script src="./evaluation/init.js"></script>
    <style>
      * {
   margin: 0;
