formatted with prettier

--- a/index.html
+++ b/index.html
@@ -4,56 +4,54 @@
   <head>
     <title>Incremental Development</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles.css" />
     <!-- Leave this here!  It renders the review buttons  -->
     <script src="./evaluation/init.js"></script>
-   <style>
-     * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-     h1 {
-       font-family: fantasy;
-       text-align: center;
-       padding: 20px;
+      h1 {
+        font-family: fantasy;
+        text-align: center;
+        padding: 20px;
+      }
 
-     }
+      p {
+        font-family: fantasy;
+        font-size: smaller;
+        text-align: center;
+        padding: 50px;
+      }
+      aside {
+        width: 40%;
+        padding-left: 0.5rem;
+        margin-left: 0.5rem;
+        float: right;
+        font-style: italic;
+        position: relative;
+      }
 
-p {
-  font-family: fantasy;
-    font-size: smaller;
-    text-align: center;
-    padding: 50px;
-}
-aside {
-    width: 40%;
-    padding-left: .5rem;
-    margin-left: .5rem;
-    float: right;
-    font-style: italic;
-    position: relative;
-  }
+      button:hover {
+        position: fixed;
+        background: rgba(red, green, blue, alpha);
+        color: rosybrown;
+        cursor: pointer;
+      }
 
-  button:hover {
-  position: fixed;
-      background: rgba(red, green, blue, alpha);
-      color: rosybrown;
-     cursor: pointer;
-
-  }
-
-  .footer-wrapper {
-  display: flex;
-  padding: 2rem;
-  width: 90%;
-  margin: auto;
-  align-items: center;
-  min-height: 10vh;
-  flex-wrap: wrap; }
-
-   </style>
+      .footer-wrapper {
+        display: flex;
+        padding: 2rem;
+        width: 90%;
+        margin: auto;
+        align-items: center;
+        min-height: 10vh;
+        flex-wrap: wrap;
+      }
+    </style>
   </head>
 
   <body>
@@ -63,21 +61,22 @@ aside {
     <aside>
       <p>
         To learn <strike>everything</strike> about people,
-        <a href="#" target="_blank">
-          ask them</a>
+        <a href="#" target="_blank"> ask them</a>
       </p>
-      <button> Connect Me </button>
+      <button>Connect Me</button>
     </aside>
     <section>
       <p>
-        Well, this has really been a tough question to answer. <br> My colleagues and I sat down last week and we spent at
-        least 45 minutes thinking about it. Still we have nothing smart to say.
+        Well, this has really been a tough question to answer. <br />
+        My colleagues and I sat down last week and we spent at least 45 minutes
+        thinking about it. Still we have nothing smart to say.
       </p>
     </section>
 
     <footer>
       <div class="footer-wrapper">
-      <h5>PeopleThinkHow &copy;</h5></div>
+        <h5>PeopleThinkHow &copy;</h5>
+      </div>
     </footer>
   </body>
 </html>
